--- a/css/style.css
+++ b/css/style.css
@@ -380,7 +380,7 @@ width: 100vw;
 /* start design  */
 .design{
   margin-top :50px;
-  background-image: url(/image/design-features.jpg);
+  background-image: url(../image/design-features.jpg);
   width: 100%;
   height: 600px;
   background-size: cover;
@@ -617,7 +617,7 @@ padding: 10px 15px;
 /* start stat  */
 .stat{
   background-color: black;
-  background-image: url('/image/stats.png');
+  background-image: url('../image/stats.png');
   background-size: cover;
   width: 100%;
   padding-top: var(--secion-padding);
@@ -886,7 +886,7 @@ background-color: var(--main-color); ;
 /* start quote */
 .quote{
   background-color:black;
-  background-image: url(/image/quote.jpg);
+  background-image: url(../image/quote.jpg);
   background-size: cover;
   position: relative;
   margin:100px 0;
@@ -1019,7 +1019,7 @@ padding:20px  0;
 .subscribe{
 padding-top: var(--secion-padding );
 padding-bottom: var(--secion-padding );
-background-image: url('/image/subscribe.jpg');
+background-image: url('../image/subscribe.jpg');
 background-size: cover;
 position: relative;
 color: white;
@@ -1184,7 +1184,7 @@ flex-direction: column
 /* END contact */
 /* start footer */
 footer {
-  background-image: url(/image/subscribe.jpg);
+  background-image: url(../image/subscribe.jpg);
   background-size:cover;
   height: 40vh;
   position: relative;
